Refactor: Replace Supabase with Prisma + NextAuth
- Migrated all database queries from Supabase to Prisma
- Replaced Supabase Auth with NextAuth.js (email provider)
- Removed @supabase/ssr and @supabase/supabase-js packages
- Added @prisma/client, @auth/prisma-adapter, pg adapter
- Updated middleware for NextAuth v4 JWT verification
- Converted all server actions to use Prisma
- Added new client-side action files for forms
- Updated all protected pages to use auth() and prisma
- Field names now use camelCase (Prisma convention)
- Enum values now use UPPERCASE (Prisma convention)

--- a/foerderkreis/.env.local.example
+++ b/foerderkreis/.env.local.example
@@ -1,4 +1,19 @@
-NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
-RESEND_API_KEY=your-resend-api-key
+# Database
+DATABASE_URL=postgres://user:password@localhost:5432/sdl_app
+
+# NextAuth
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=your-secret-key-here-generate-with-openssl-rand-base64-32
+
+# Email (for magic links)
+EMAIL_SERVER_HOST=smtp.example.com
+EMAIL_SERVER_PORT=587
+EMAIL_SERVER_USER=user
+EMAIL_SERVER_PASSWORD=password
+EMAIL_FROM=noreply@sdl-app.de
+
+# Optional: Resend API for email (alternative to SMTP)
+# RESEND_API_KEY=your-resend-api-key
+
+# Cron authentication
 CRON_SECRET=your-cron-secret
